# src/api.ts
@@ -1,7 +1,9 @@
+const isDev = process.env.NODE_ENV !== 'production';
+const isTest = process.env.NODE_ENV === 'test';
 import * as dotenv from 'dotenv';
-if (process.env.NODE_ENV !== 'production') { dotenv.config(); }
+if (isDev) { dotenv.config(); }
 
-import path from 'path';
+import { createReadStream } from 'fs';
 import OpenAPIBackend from 'openapi-backend';
 import { Context as OpenAPIContext } from 'openapi-backend/backend';
 import Koa from 'koa';
@@ -9,38 +11,36 @@ import KoaBodyparser from 'koa-bodyparser';
 import json from 'koa-json';
 import logger from 'koa-logger';
 
-import api from './paths/api';
+import root from './paths/root';
 import contribution from './paths/contribution';
+import download from './paths/download';
 import search from './paths/search';
-
-const latest = 'v0';
-
-const API = new Koa();
-API.use(KoaBodyparser());
 
 // Define API
 const server = new OpenAPIBackend({
-  definition: path.join(__dirname, 'docs', 'v0', 'openapi.yaml'),
+  definition: 'dist/public/v0/openapi.yaml',
   handlers: {
-    ... api,
+    ... root,
     ... contribution,
+    ... download,
     ... search,
     validationFail: async (c: OpenAPIContext, ctx: Koa.Context) => {
       ctx.body = { err: c.validation.errors };
       ctx.status = 400;
     },
     notFound: async (c: OpenAPIContext, ctx: Koa.Context) => {
-      if (
-        ctx.request.path === '/' ||
-        ctx.request.path === `/${latest}` ||
-        ctx.request.path === `/${latest}/`
-      ) {
-        ctx.redirect('https://api.docs.earthref.org');
-      } else if (
-        ctx.request.path === '/openapi.yaml' ||
-        ctx.request.path === `/${latest}/openapi.yaml`
-      ) {
-        ctx.redirect(`https://api.docs.earthref.org/${latest}/openapi.yaml`);
+      if (ctx.request.url === '/' ||
+          ctx.request.url === '/index.html') {
+        ctx.redirect('/v0')
+      } else if (ctx.request.url === '/v0' ||
+          ctx.request.url === '/v0/' ||
+          ctx.request.url === '/v0/index.html') {
+        ctx.type = 'html';
+        ctx.body = createReadStream('dist/public/v0/index.html');
+      } else if (ctx.request.url === '/openapi.yaml' ||
+          ctx.request.url === '/v0/openapi.yaml') {
+        ctx.type = 'text';
+        ctx.body = createReadStream('dist/public/v0/openapi.yaml');
       } else {
         ctx.body = { err: `Path '${ctx.request.path}' is not defined for this API. See https://api.docs.earthref.org for more information.` };
         ctx.status = 404;
@@ -58,8 +58,25 @@ const server = new OpenAPIBackend({
 });
 server.init();
 
+const API = new Koa();
+
+// Return JSON errors
+API.use(async (ctx, next) => {
+  try {
+    await next();
+  } catch (err) {
+    ctx.status = err.statusCode || err.status || 500;
+    ctx.body = {
+      message: err.message
+    };
+  }
+});
+
+// Serve API endpoints
+API.use(KoaBodyparser());
+
 // Log requests
-if (process.env.NODE_ENV === 'development') { API.use(logger()); }
+if (isDev) API.use(logger());
 
 // Pretty print JSON output
 API.use(json());
@@ -77,6 +94,6 @@ API.use((ctx) =>
     ctx,
   ),
 );
-
-API.listen(process.env.PORT);
+API.listen(isTest && process.env.TEST_PORT || process.env.PORT);
 export { API };
+console.log('FIESTA API listening on port', isTest && process.env.TEST_PORT || process.env.PORT);
